--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <tr>
                         <td><strong>Phone</strong></td>
                         <td>
-                            <a href="https://wa.me/62881026124253?text=Haloo%20brow" target="_blank">0881026124253</a>
+                            <a href="https://wa.me/62881026124253?text=Halloo%20brow" target="_blank">0881026124253</a>
                         </td>
                     </tr>
                     <tr>
@@ -47,7 +47,7 @@
                     </tr>
                 </table>
                 <p>
-                    <a href="https://www.instagram.com/roifnvtajiee/" target="_blank">
+                    <a href="https://www.instagram.com/roifnvtajieee/" target="_blank">
                         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" width="20" height="20">
                     </a>
                     <a href="https://github.com/kangajie" target="_blank">
@@ -155,4 +155,5 @@
         </center>
     </footer>
 </body>
+
 </html>
