--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </tr>
                 </table>
                 <p>
-                    <a href="https://www.instagram.com/roifnvtajieee/" target="_blank">
+                    <a href="https://www.instagram.com/roifnvtaaa/" target="_blank">
                         <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" width="20" height="20">
                     </a>
                     <a href="https://github.com/kangajie" target="_blank">
@@ -157,3 +157,4 @@
 </body>
 
 </html>
+
